--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Te Amo Lorayne</title>
+    <title>Eu não planejei, mas você virou alguém importante pra mim. Topa continuar isso comigo?</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
